# Neural-Moment-Matching-Regression

./: .gitignore  CLAUDE.md  CONSISTENCY_INVESTIGATION.md  RESEARCH_DIARY.md  main.py  pyproject.toml
configs/mar_pci_configs/: baseline.json  baseline_insupport.json  baseline_paper.json  modified.json  modified_insupport.json  modified_paper.json  oracle_baseline.json  oracle_baseline_5xsteps.json  oracle_baseline_fullbatch.json  oracle_baseline_insupport.json  oracle_baseline_insupport_smoke20.json  oracle_baseline_paper.json  oracle_modified.json  oracle_modified_insupport.json  oracle_modified_paper.json  smoke_baseline.json  smoke_modified.json  smoke_oracle_baseline.json  smoke_oracle_modified.json  upstream_demand_3k_fixed.json  upstream_demand_3k_grow_n1000.json  upstream_demand_3k_grow_n10000.json  upstream_demand_3k_grow_n2000.json  upstream_demand_3k_grow_n20000.json  upstream_demand_3k_grow_n5000.json  upstream_demand_is.json  upstream_demand_n1000.json  upstream_demand_n10000.json  upstream_demand_n2000.json  upstream_demand_n20000.json  upstream_demand_oos.json
scripts/: gen_convergence_configs.py  plot_consistency.py  plot_consistency_compare.py  plot_training_history.py  plot_validation.py  run_convergence_analysis.sh
slurm/: run_one_config.sh  submit_convergence_sweep.sh  submit_paper_sweep.sh
src/: experiment.py
src/data/ate/: __init__.py  data_class_mar.py  demand_pv.py  demand_pv_mar.py
src/models/NMMR/: NMMR_experiments.py  NMMR_loss.py  NMMR_trainers.py  mar_imputer.py
